refactor structure - structure api
